--- a/tasks/remove.record.yml
+++ b/tasks/remove.record.yml
@@ -3,59 +3,14 @@
 # tasks file for nrg.godaddy
 - name: setup api_server_url
   set_fact:
-    api_server_url: '{{api_server}}/v{{api_version}}/domains/{{domain_name}}/records'
+    api_server_url: '{{api_server}}/v{{api_version}}/domains/{{domain_name}}/records/{{type}}/{{record_name}}'
     authorization:  'sso-key {{api_key}}:{{api_secret}}'
     need_delete:    False
 
 - name: call godaddy api to update/create new record
   uri:
     url:          '{{api_server_url}}'
-    method:       GET
+    method:       DELETE
     body_format:  json
     headers:
       Authorization: '{{authorization}}'
-  register: current_records_result
-
-- name: setup current_records
-  set_fact:
-    current_records: '{{current_records_result.json}}'
-
-- name: print current_records
-  debug:
-    var:        current_records
-    verbosity:  3
-
-- name: create empty new_records
-  set_fact:
-    new_records: []
-
-- name: update new_records with records we want to leave
-  set_fact:
-    new_records: '{{new_records + [record]}}'
-  with_items: '{{current_records}}'
-  loop_control:
-    loop_var: record
-  when:
-  - ((record.type != type) or (record.name != record_name))
-
-- name: print new_records
-  debug:
-    var:        new_records
-    verbosity:  3
-
-- name: print new_records
-  debug:
-    var:        new_records
-    verbosity:  3
-
-- name: call godaddy api to delete a record
-  uri:
-    url:          '{{api_server_url}}'
-    method:       PUT
-    body:         '{{new_records|to_json}}'
-    body_format:  json
-    headers:
-      Authorization: '{{authorization}}'
-      Accept: 'application/json'
-  when:
-  - (current_records|length) != (new_records|length)
